[package]
name = "shiny-rs-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-interop = { version="0.3.0", features=["script"] }
serde = { version = "1.0.145", features = ["derive"] }
wasm-bindgen = { version="0.2.83", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.4.3"

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = []
